syntax = "proto3";
package hello;

import "google/api/annotations.proto";

message HelloRequest {
  string greeting = 1;
}

message HelloResponse {
  string reply = 1;
  repeated int32 number=4;
}

service HelloService {
  rpc SayHello(HelloRequest) returns (HelloResponse){
    option(google.api.http) = {
      post : "/hello/say",
      body : "*"
    };
  }
}